--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "next": "^12.0.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^6.0.0-rc.1"
   },
   "scripts": {
     "dev": "next dev",
